specified parent artifact and artifact type name rather than sequence #

--- a/www/ui/milestone1x_screens/2-1-4.html
+++ b/www/ui/milestone1x_screens/2-1-4.html
@@ -178,6 +178,7 @@
         <td>
         <select class="select">
         <option>-</option>
+		<option>Artifact X</option>
         </select>
         </td>
         </tr>        
@@ -194,6 +195,7 @@
         <td>
         <select class="select">
         <option>-</option>
+		<option>Artifact X</option>
         </select>
         </td>
         </tr>
@@ -210,6 +212,8 @@
         <td>
         <select class="select">
         <option>-</option>
+		<option>Artifact X</option>
+
         </select>
         </td>
         </tr>
@@ -226,7 +230,7 @@
         </td>
         <td>
         <select class="select">
-        <option>2</option>
+        <option>Artifact X</option>
         </select>
         </td>
         </tr>        
@@ -243,7 +247,7 @@
         </td>
         <td>
         <select class="select">
-        <option>2</option>
+        <option>Artifact X</option>
         </select>
         </td>
         </tr>
@@ -261,6 +265,7 @@
         <td>
         <select class="select">
         <option>-</option>
+		<option>Artifact X</option>
         </select>
         </td>
         </tr>        
@@ -279,6 +284,7 @@
         <td>
         <select class="select">
         <option>-</option>
+		<option>Artifact X</option>
         </select>
         </td>
         </tr>
