brain dump of status Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.26 2001/09/19 18:08:31 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.27 2001/10/08 22:31:16 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,7 +20,7 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/09/19 18:08:31 $
+Last Updated: $Date: 2001/10/08 22:31:16 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
@@ -56,16 +56,15 @@ up to date reflection of the current project status.
 
 <ul>
 <li>
-    9-19-01 - Everyone is still coding like mad in order to reach our
-    Alpha 1 date. We would also like to welcome a new (non-CollabNet)
-    developer to the project, Tim McNerney. He is currently working on
-    improving the testing suites. There also seems to be an influx of
-    people registering for Observer roles (1-4/day!) on the Scarab
-    project as well as people looking at the Runbox. Welcome! If you are
-    inclined, please join our development mailing list and send us an
-    intro or some comments.
+    10-8-01 - Brain dump: Still coding like mad. A proposal has gone out
+    regarding Artifact Types. We are going to try to make this into the
+    alpha release. Got the i18n stuff in place and tested. John and
+    Elicia are working on templates. Still need to work through the code
+    and fix a lot of the FIXME's. Need to come up with a scheme for
+    dealing with tracking post data after login as well as come up with
+    a chain of screen tracking. Susan is working on updating the UI's to
+    the latest CSS. Other than that, we are looking pretty good.
 </li>
-
 </ul>
 
 </body>
