lots of miscellaneous usage fixes

--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -91,10 +91,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -107,17 +107,17 @@
 	<div class="app" id="div2-1-0">
 		<h2>Enter issue (2.1.0)</h2>
 		
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<th><small>1:</small> Summary info</th>
-			<td><small>2:</small> <a href="#" title="view duplicate check information">Duplicate check</a></td>
-			<td><small>3:</small> <a href="#" title="view verbose information">Verbose info</a></td>
+			<th>1: Summary info</th>
+			<td>2: <a href="#" title="view duplicate check information">Duplicate check</a></td>
+			<td>3: <a href="#" title="view verbose information">Verbose info</a></td>
 			</tr>
 			</table>
 		</div>
 				
-		<p class="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
+		<p class="functnbar"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
 		
 		<h3>Apply issue entry template</h3>
 		
@@ -266,7 +266,7 @@
 			</tr>
 			</table>
 		</div>
-		<p class="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
+		<p class="functnbar"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
 	</div>
 	<!-- Scarab - App -->
 
