--- a/www/ui/milestone1x_screens/2-1-4-0.html
+++ b/www/ui/milestone1x_screens/2-1-4-0.html
@@ -115,10 +115,10 @@
             <option>query one</option>
             <option>query two</option>
             </select> 
-            <input type="submit" name="query" value="Go" class="bttn" />
+            <input type="submit" name="query" value="Go" />
             &nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
             <input type="text" size="15" name="" />
-            <input type="submit" name="query" value="Query" class="bttn" />
+            <input type="submit" name="query" value="Query" />
             &nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
             <a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
             </td>           
@@ -146,8 +146,8 @@
             </tr>
 
             <tr>
-            <td><input type="submit" value="submit changes" class="button" />&#160;<input type="submit" value="cancel" class="button" /></td>
-            <td><input type="submit" value="add new" class="button" />&#160;<input type="submit" value="copy" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
+            <td><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" /></td>
+            <td><input type="submit" value="add new" />&#160;<input type="submit" value="copy" />&#160;<input type="submit" value="delete" />&#160;<input type="submit" value="resort" /></td>
 
             </tr>
             </table>
@@ -271,8 +271,8 @@
             </tr>
 
             <tr>
-            <td><input type="submit" value="submit changes" class="button" />&#160;<input type="submit" value="cancel" class="button" /></td>
-            <td><input type="submit" value="add new" class="button" />&#160;<input type="submit" value="copy" class="button" />&#160;<input type="submit" value="delete" class="button" />&#160;<input type="submit" value="resort" class="button" /></td>
+            <td><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" /></td>
+            <td><input type="submit" value="add new" />&#160;<input type="submit" value="copy" />&#160;<input type="submit" value="delete" />&#160;<input type="submit" value="resort" /></td>
 
             </tr>
             </table>
