--- a/www/ui/milestone1x_screens/3-0-0.html
+++ b/www/ui/milestone1x_screens/3-0-0.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -144,14 +144,14 @@
 		<h2>Global attributes (3.0.0)</h2>
 
 		
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<th>global attributes</th>
 			<td><a href="#" title="Customize 'enter issue'">Customize "enter issue"</a></td>
 			</tr>
 			</table>
-		</div><br>
+		</div>
 
 
 		
@@ -163,8 +163,8 @@
 			<td><strong>general functions</strong></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="add to 'Enter issue page'" class="bttn" />&nbsp;<input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" /></td>
-			<td><input type="submit" value="create new" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" /></td>
+			<td><input type="submit" value="add to 'Enter issue page'" />&nbsp;<input type="submit" value="copy" />&nbsp;<input type="submit" value="delete" /></td>
+			<td><input type="submit" value="create new" />&nbsp;<input type="submit" value="cancel" /></td>
 
 			</tr>
 			</table>
@@ -236,8 +236,8 @@
 			<td><strong>general functions</strong></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="add to 'Enter issue page'" class="bttn" />&nbsp;<input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" /></td>
-			<td><input type="submit" value="create new" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" /></td>
+			<td><input type="submit" value="add to 'Enter issue page'" />&nbsp;<input type="submit" value="copy" />&nbsp;<input type="submit" value="delete" /></td>
+			<td><input type="submit" value="create new" />&nbsp;<input type="submit" value="cancel" /></td>
 
 			</tr>
 			</table>
