--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -157,10 +157,10 @@
 			<td><strong>refine query:</strong></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="query" class="bttn" /></td>
-			<td><input type="submit" value="selected" class="bttn" />&nbsp;<input type="submit" value="all" class="bttn" /></td>
-			<td><input type="submit" value="selected" class="bttn" />&nbsp;<input type="submit" value="all" class="bttn" /></td>
-			<td><input type="submit" value="go" class="bttn" /></td>
+			<td><input type="submit" value="query" /></td>
+			<td><input type="submit" value="selected" />&nbsp;<input type="submit" value="all" /></td>
+			<td><input type="submit" value="selected" />&nbsp;<input type="submit" value="all" /></td>
+			<td><input type="submit" value="go" /></td>
 			</tr>
 			</table>
 		</p>
@@ -221,15 +221,15 @@
 			<td><strong>refine query:</strong></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="query" class="bttn" /> </td>
-			<td><input type="submit" value="selected" class="bttn" /> <input type="submit" value="all" class="bttn" /></td>
-			<td><input type="submit" value="selected" class="bttn" /> <input type="submit" value="all" class="bttn" /></td>
-			<td><input type="submit" value="go" class="bttn" /></td>
+			<td><input type="submit" value="query" /> </td>
+			<td><input type="submit" value="selected" /> <input type="submit" value="all" /></td>
+			<td><input type="submit" value="selected" /> <input type="submit" value="all" /></td>
+			<td><input type="submit" value="go" /></td>
 			</tr>
 			</table>
 		</p>
 		
-		<p>issues per page:&#160; <input type="radio" name="foo" checked="checked" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" class="bttn" /></p>
+		<p>issues per page:&#160; <input type="radio" name="foo" checked="checked" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100&#160;<input type="submit" value="refresh" /></p>
 		
 		<p>&#171; previous | 1 of 1 | next &#187; (<a href="#">add/remove attributes from view</a>)</p>
 	</div>
