--- a/www/ui/milestone5x_screens/2-5-0.html
+++ b/www/ui/milestone5x_screens/2-5-0.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div3-5-1">
 		<h2>Custom alert email list (2.5.0)</h2>
 		
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td><a href="#" title="workflow customization options">Workflow customization options</a></td>
@@ -163,9 +163,9 @@
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="all" class="bttn" />&nbsp;<input type="submit" value="selected" class="bttn" /></td>			
-			<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
-			<td><input type="submit" value="Define new email" class="bttn" />&nbsp;</td>
+			<td><input type="submit" value="all" />&nbsp;<input type="submit" value="selected" /></td>			
+			<td><input type="submit" value="copy" />&nbsp;<input type="submit" value="delete" />&nbsp;<input type="submit" value="subscribe" />&nbsp;<input type="submit" value="unsubscribe" /></td>
+			<td><input type="submit" value="Define new email" />&nbsp;</td>
 			</tr>
 			</table>
 		</p>
@@ -256,9 +256,9 @@
 			<td rowspan="2"><img src="../csi/images/seperator.gif" width="2" height="35" alt="" border="0" /></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="all" class="bttn" />&nbsp;<input type="submit" value="selected" class="bttn" /></td>			
-			<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
-			<td><input type="submit" value="Define new email" class="bttn" />&nbsp;</td>
+			<td><input type="submit" value="all" />&nbsp;<input type="submit" value="selected" /></td>			
+			<td><input type="submit" value="copy" />&nbsp;<input type="submit" value="delete" />&nbsp;<input type="submit" value="subscribe" />&nbsp;<input type="submit" value="unsubscribe" /></td>
+			<td><input type="submit" value="Define new email" />&nbsp;</td>
 			</tr>
 			</table>
 		</p>
