--- a/www/ui/milestone5x_screens/3-5-1.html
+++ b/www/ui/milestone5x_screens/3-5-1.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div3-5-1">
 		<h2>Define custom alert email (3.5.1)</h2>
 		
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td><a href="#" title="workflow customization options">Workflow customization options</a></td>
@@ -152,7 +152,7 @@
 			</table>
 		</div>
 		
-		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" />&nbsp;<input type="submit" value="clear form" /></p>
 		
 		<h3>Custom alert email for project:</h3>
 		
@@ -228,7 +228,7 @@
 		
 		<p>Issues per email:&#160; <input type="radio" name="foo" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100</p>
 
-		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" />&nbsp;<input type="submit" value="clear form" /></p>
 	</div>
 	<!-- Scarab - App -->
 
