--- a/www/ui/milestone8x_screens/2-0-0-1-3.html
+++ b/www/ui/milestone8x_screens/2-0-0-1-3.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div2-0-0-1-3">
 		<h2>Queue (2.0.0.1.3)</h2>
 		
-		<p class="functnbar"><input type="submit" value="create queue" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="create queue" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
 		
 		<h3>Options</h3>
 		
@@ -227,7 +227,7 @@
 			</table>
 		</div>
 
-		<p class="functnbar"><input type="submit" value="create queue" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="create queue" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset" /></p>
 	</div>
 	<!-- Scarab - App -->
 
