--- a/www/ui/milestone10x_screens/2-1-0-1.html
+++ b/www/ui/milestone10x_screens/2-1-0-1.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div2-1-0-1">
 		<h2>Save / edit template (2.1.0.1)</h2>
 
-		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
 		
 		<p><a href="#">use this template</a></p>
 		
@@ -171,13 +171,13 @@
 		
 
 		<h3>Completed Attributes in "Enter Issue" template</h3>
-		<br>
-		<div id="tabs">
+		
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<th><small>1:</small> Summary info</th>
-			<td><small>2:</small> Duplicate check</td>
-			<td><small>3:</small> <a href="#" title="view verbose information">Verbose info</a></td>
+			<th>1: Summary info</th>
+			<td>2: Duplicate check</td>
+			<td>3: <a href="#" title="view verbose information">Verbose info</a></td>
 			</tr>
 			</table>
 		</div>
@@ -304,7 +304,7 @@
 		</div>
 	</div>
 
-		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="submit changes" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="clear form" /></p>
 	</div>
 	<!-- Scarab - App -->
 
