--- a/www/ui/milestone1x_screens/2-1-1.html
+++ b/www/ui/milestone1x_screens/2-1-1.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,12 +143,12 @@
 	<div class="app" id="div2-1-1">
 		<h2>Identified as duplicate (2.1.1)</h2>
 
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
-			<td><small>1:</small> <a href="#" title="view summary information">Summary info</a></td>
-			<th><small>2:</small> Duplicate check</th>
-			<td><small>3:</small> <a href="#" title="view verbose information">Verbose info</a></td>
+			<td>1: <a href="#" title="view summary information">Summary info</a></td>
+			<th>2: Duplicate check</th>
+			<td>3: <a href="#" title="view verbose information">Verbose info</a></td>
 			</tr>
 			</table>
 		</div>
