--- a/www/ui/milestone1x_screens/3-0-1.html
+++ b/www/ui/milestone1x_screens/3-0-1.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -156,8 +156,8 @@ global attribute create new page (it is the same create new button that is on th
 			<td><strong>general functions</strong></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="add to 'Enter issue page'" class="bttn" /></td>
-			<td><input type="submit" value="create new" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" /></td>
+			<td><input type="submit" value="add to 'Enter issue page'" /></td>
+			<td><input type="submit" value="create new" />&nbsp;<input type="submit" value="cancel" /></td>
 
 			</tr>
 			</table>
@@ -223,8 +223,8 @@ global attribute create new page (it is the same create new button that is on th
 			<td><strong>general functions</strong></td>
 			</tr>
 			<tr>
-			<td><input type="submit" value="add to 'Enter issue page'" class="bttn" /></td>
-			<td><input type="submit" value="create new" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" /></td>
+			<td><input type="submit" value="add to 'Enter issue page'" /></td>
+			<td><input type="submit" value="create new" />&nbsp;<input type="submit" value="cancel" /></td>
 
 			</tr>
 			</table>
