--- a/www/ui/milestone2x_screens/2-2-0-x.html
+++ b/www/ui/milestone2x_screens/2-2-0-x.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div2-2-0-x">
 		<h2>Custom search (2.2.0.x)</h2>
 		
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td><a href="#" title="view advanced query information">Avanced query</a></td>
@@ -153,7 +153,7 @@
 			</table>
 		</div>
 		
-		<p class="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" /></p>
 		
 		<h3>Text search</h3>
 		
@@ -206,7 +206,7 @@ URL
 		
 		<p><a href="#">edit custom search</a></p>
 
-		<p class="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="search" />&#160;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
