--- a/www/ui/milestone2x_screens/2-2-2.html
+++ b/www/ui/milestone2x_screens/2-2-2.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div id="div2-2-2" class="app">
 		<h2>Saved query list (2.2.2)</h2>
 
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td><a href="#" title="view advanced query information">Avanced query</a></td>
@@ -167,9 +167,9 @@
 			</tr>
 
 			<tr>
-			<td><input type="submit" value="save" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" />&nbsp;<input type="submit" value="new" class="bttn" /></td>			
+			<td><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" />&nbsp;<input type="submit" value="new" /></td>			
 
-			<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
+			<td><input type="submit" value="copy" />&nbsp;<input type="submit" value="delete" />&nbsp;<input type="submit" value="subscribe" />&nbsp;<input type="submit" value="unsubscribe" /></td>
 
 			</tr>
 			</table>
@@ -270,9 +270,9 @@
 			</tr>
 
 			<tr>
-			<td><input type="submit" value="save" class="bttn" />&nbsp;<input type="submit" value="cancel" class="bttn" />&nbsp;<input type="submit" value="new" class="bttn" /></td>			
+			<td><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" />&nbsp;<input type="submit" value="new" /></td>			
 
-			<td><input type="submit" value="copy" class="bttn" />&nbsp;<input type="submit" value="delete" class="bttn" />&nbsp;<input type="submit" value="subscribe" class="bttn" />&nbsp;<input type="submit" value="unsubscribe" class="bttn" /></td>
+			<td><input type="submit" value="copy" />&nbsp;<input type="submit" value="delete" />&nbsp;<input type="submit" value="subscribe" />&nbsp;<input type="submit" value="unsubscribe" /></td>
 
 			</tr>
 			</table>
