--- a/www/ui/milestone3x_screens/2-0-0-2.html
+++ b/www/ui/milestone3x_screens/2-0-0-2.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div2-0-0-2">
 		<h2>Vote management (2.0.0.2)</h2>
 		
-		<p class="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset to defaults" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 		
 		<p><a href="#">add/remove attributes from view</a></p>
 		
@@ -264,14 +264,14 @@
 		
 		<tr class="a">
 		<td colspan="9">
-		<input type="submit" value="resort" class="button" />
+		<input type="submit" value="resort" />
 		</td>
 		</tr>
 		</table>
 
-		<p><input type="submit" value="remove vote from selected" class="button" />&#160;<input type="submit" value="submit updates to admin" class="button" /></p>
+		<p><input type="submit" value="remove vote from selected" />&#160;<input type="submit" value="submit updates to admin" /></p>
 
-		<p class="functnbar"><input type="submit" value="save" class="button" />&#160;<input type="submit" value="cancel" class="button" />&#160;<input type="submit" value="reset to defaults" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&#160;<input type="submit" value="cancel" />&#160;<input type="submit" value="reset to defaults" /></p>
 	</div>
 	<!-- Scarab - App -->
 
