--- a/www/ui/milestone3x_screens/2-7-0(2).html
+++ b/www/ui/milestone3x_screens/2-7-0(2).html
@@ -126,10 +126,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -142,7 +142,7 @@
 	<div class="app" id="div2-7-0">
 		<h2>Copy / move Issue (2.7.0) step2</h2>
 		
-		<p class="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" /></p>
 		
 		<h3>Issue to be copied / moved</h3>
 		
@@ -276,7 +276,7 @@
 		</tr>
 		</table>
 		
-		<p class="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="move / copy" />&nbsp;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
