--- a/www/ui/milestone4x_screens/3-5-0.html
+++ b/www/ui/milestone4x_screens/3-5-0.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div3-5-0">
 		<h2>Workflow customization options (3.5.0)</h2>
 
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<th>Workflow customization options</th>
