--- a/www/ui/milestone5x_screens/2-5-1.html
+++ b/www/ui/milestone5x_screens/2-5-1.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div3-5-1">
 		<h2>Define custom alert email (2.5.1)</h2>
 	  	  	
-		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" />&nbsp;<input type="submit" value="clear form" /></p>
 
 		<h3>Subscription info</h3>
 
@@ -383,7 +383,7 @@
 		</tr>        
 		</table>
 
-		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" class="button" />&nbsp;<input type="submit" value="clear form" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save" />&nbsp;<input type="submit" value="cancel" />&nbsp;<input type="submit" value="clear form" /></p>
 	</div>
 	<!-- Scarab - App -->
 
