--- a/www/ui/milestone6x_screens/2-4-1_5b.html
+++ b/www/ui/milestone6x_screens/2-4-1_5b.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -143,7 +143,7 @@
 	<div class="app" id="div2-4-1-step5b">
 		<h2>Define report (2.4.1)</h2>
 		
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td>1: <a href="#" title="summary info">Summary info</a></td>
@@ -371,7 +371,7 @@
 </tr>
 </table>
 
-<p><input type="submit" value="add date fields" />&nbsp;<input type="submit" value="remove date fields" class="button" /></p>
+<p><input type="submit" value="add date fields" />&nbsp;<input type="submit" value="remove date fields" /></p>
 
 			</td>
 			</tr>
