--- a/www/ui/milestone6x_screens/2-4-1_b-output.html
+++ b/www/ui/milestone6x_screens/2-4-1_b-output.html
@@ -127,10 +127,10 @@
 			<option>query one</option>
 			<option>query two</option>
 			</select> 
-			<input type="submit" name="query" value="Go" class="bttn" />
+			<input type="submit" name="query" value="Go" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<input type="text" size="15" name="" />
-			<input type="submit" name="query" value="Query" class="bttn" />
+			<input type="submit" name="query" value="Query" />
 			&nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
 			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
 			</td>			
@@ -234,7 +234,7 @@
 		
 		<p>page 1 of 1</p>
 
-		<p class="functnbar"><input type="submit" value="save this report" />&nbsp;<input type="submit" value="print" />&nbsp;<input type="submit" value="cancel" class="button" /></p>
+		<p class="functnbar"><input type="submit" value="save this report" />&nbsp;<input type="submit" value="print" />&nbsp;<input type="submit" value="cancel" /></p>
 	</div>
 	<!-- Scarab - App -->
 
